--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">GB-2-06-Fragments</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="msc">Москва</string>
+    <string name="nsk">Новосибирск</string>
+    <string name="sam">Самара</string>
+    <string name="ebrg">Екатеринбург</string>
+    <string name="spb">Санкт-Петербург</string>
+    <string name="chel">Челябинск</string>
+    <string name="izh">Ижевск</string>
 </resources>
